--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^6.0.14",
     "@mantine/hooks": "^6.0.14",
     "firebase": "^9.23.0",
+    "luxon": "^3.3.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
