--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "nextjs-photo-yt",
+  "name": "credit",
+  "homepage": "https://Fresh-static-snow.github.io/credit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -16,13 +18,14 @@
     "@mantine/hooks": "^6.0.14",
     "firebase": "^9.23.0",
     "luxon": "^3.3.0",
-    "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hook-form-mantine": "^1.0.10",
     "react-icons": "^4.4.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "gh-pages": "^5.0.0",
+    "next": "^13.4.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
