--- a/package.json
+++ b/package.json
@@ -16,22 +16,25 @@
     "@mantine/core": "^6.0.14",
     "@mantine/form": "^6.0.14",
     "@mantine/hooks": "^6.0.14",
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
     "firebase": "^9.23.0",
+    "gh-pages": "^5.0.0",
     "luxon": "^3.3.0",
+    "next": "13.4.7",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hook-form-mantine": "^1.0.10",
     "react-icons": "^4.4.0",
-    "yup": "^1.2.0",
-    "gh-pages": "^5.0.0",
-    "next": "^13.4.7"
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "@types/luxon": "^3.3.0"
   }
 }
